Attempt2: Try to fix layout bug in change avatar dialog.

--- a/src/common/common.scss
+++ b/src/common/common.scss
@@ -1,6 +1,15 @@
 .image-cropper-container {
   position: relative;
+  box-sizing: border-box;
   user-select: none;
+}
+
+.image-cropper-container img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .image-cropper-mask-container {
