--- a/src/user/user-page.scss
+++ b/src/user/user-page.scss
@@ -2,6 +2,10 @@
   max-width: 600px;
 }
 
+.change-avatar-cropper-row {
+  max-height: 400px;
+}
+
 .change-avatar-img {
   min-width: 50%;
   max-width: 100%;
